# causal-inspection

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml  tests.yml
cinspect/: __init__.py  collectors.py  dependence.py  dimension.py  estimators.py  evaluators.py  importance.py  inspect.py  model_evaluation.py  stats.py  utils.py
data/: synthetic_coef.spkl
dev/: add_copyright.py
docs/source/: conf.py  index.rst
docs/source/api/: api.rst  dimension.rst  estimators.rst  importance.rst  model_evaluation.rst  stats.rst
docs/source/cinspect/: cinspect.rst  dependence.rst  dimension.rst  evaluators.rst  stats.rst  utils.rst
docs/source/simulations/: collinear_sim.rst  datagen.rst  simple_sim.rst  simulations.rst
prof/: test_evaluator_calls.prof  test_linear_binary_ate[0-1-0--0.5].prof  test_linear_binary_ate[0-1-0-0.1].prof  test_linear_binary_ate[0-1-0-0.3].prof  test_linear_binary_ate[0-1-0-0.9].prof  test_linear_binary_ate[0-1-0-0].prof
simulations/: __init__.py  collinear_sim.py  datagen.py  simple_sim.py
tests/: conftest.py  test_dependence.py  test_estimators.py  test_evaluators.py  test_model_evaluation.py  test_simple_sim.py  test_sims.py  test_stats.py  test_strategies.py  test_utils.py  testing_strategies.py
