[tool.poetry]
name = "causal-inspection"
version = "0.0.1"
description = "Scikit-learn inspired inspection utilities for causal models"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "causal_inspection"}]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.23.4"
scipy = "^1.9.3"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"
multimethod = "^1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
